--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gen-react-code": "generate-react-code"
+  },
+  "devDependencies": {
+    "generate-react-code": "^1.2.3"
   }
 }
